--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -8,6 +8,10 @@
 }
 
 /* width */
+h1 {
+  font-family: "Montserrat", "Open Sans", Arial, Verdana, sans-serif;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -27,7 +31,6 @@
 
 .hide {
   display: none !important;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -36,13 +39,12 @@
 }
 
 .bg-g {
-  -webkit-transition: 0.2s;
   transition: 0.2s;
-  background-color: #0573F0;
+  background-color: hsl(188deg, 93%, 28%);
 }
 
 ._border {
-  border-color: #0573F0 !important;
+  border-color: hsl(188deg, 93%, 28%) !important;
 }
 
 body {
@@ -50,7 +52,6 @@ body {
   padding: 0;
   margin: 0;
 }
-
 body ._main {
   width: 100vw;
   height: 100vh;
@@ -66,7 +67,6 @@ body ._main {
   margin-right: 0;
   margin-left: 0;
 }
-
 body ._main #widget {
   border-radius: 25px;
   height: 70vh;
@@ -76,91 +76,70 @@ body ._main #widget {
   border: 1px solid white;
   padding: 0;
 }
-
 body ._main #widget h2 {
   font-size: 32px;
   color: #292928;
   font-weight: 600;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-
 body ._main #widget p {
   font-size: 16px;
   color: #292928;
   font-weight: 400;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-
 body ._main #widget form {
   overflow: hidden;
 }
-
 body ._main #widget form input {
   width: 70%;
   height: 45px;
   margin: 3px;
 }
-
 body ._main #widget form input:focus {
-  -webkit-transition: 0.1s;
   transition: 0.1s;
-  outline: 1.5px solid #0573F0;
+  outline: 1.5px solid hsl(188deg, 93%, 28%);
 }
-
 body ._main #widget form button {
-  background-color: #0573F0;
+  background-color: hsl(188deg, 93%, 28%);
   width: 70%;
   height: 45px;
   font-size: 18px;
   font-weight: 500;
 }
-
 body ._main #widget form a {
   font-size: 17px;
   font-weight: 500;
   color: #888888;
 }
-
 body ._main #widget ._toggle-menu {
   height: 6vh;
   max-height: 6vh;
   min-height: 6vh;
 }
-
 body ._main #widget ._toggle-menu ._dash {
   width: 35px;
   height: 2px;
   background-color: #888888;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
   cursor: pointer;
 }
-
 body ._main #widget ._toggle-menu ._close-x {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  -webkit-transition: 0.4s;
+  transform: rotate(45deg);
   transition: 0.4s;
   background-color: white !important;
 }
-
 body ._main #widget ._toggle-menu ._close-y {
   margin-top: -10px !important;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  -webkit-transition: 0.4s;
+  transform: rotate(-45deg);
   transition: 0.4s;
   background-color: white !important;
 }
-
 body ._main #widget ._content {
   min-height: 58vh;
   height: 58vh;
   min-width: 27vw;
 }
-
 body ._main #widget ._content ._scrollable {
   overflow: auto;
   overflow-x: hidden !important;
@@ -169,115 +148,98 @@ body ._main #widget ._content ._scrollable {
   min-height: 275px;
   margin: 12px 0;
 }
-
 body ._main #widget ._content ._scrollable::-webkit-scrollbar {
   width: 5px;
 }
-
 body ._main #widget ._content ._scrollable::-webkit-scrollbar-track {
-  background: #0573f042;
+  background: rgba(5, 115, 240, 0.2588235294);
   border-radius: 5px;
 }
-
 body ._main #widget ._content ._scrollable::-webkit-scrollbar-thumb {
   background: #888888;
   border-radius: 5px;
 }
-
 body ._main #widget ._content ._scrollable::-webkit-scrollbar-thumb:hover {
   background: #575756;
 }
-
 body ._main #widget ._content ._scrollable ._card {
   margin: 10px;
   text-align: left;
   width: 22vw;
   min-height: 100px;
-  border: 2px solid #0573f042;
+  border: 2px solid rgba(5, 115, 240, 0.2588235294);
   padding: 15px;
   border-radius: 15px;
 }
-
 body ._main #widget ._content ._scrollable ._card h5 {
   font-size: 16px;
   color: #575756;
   margin-bottom: 0;
   font-weight: 500;
 }
-
 body ._main #widget ._content ._scrollable ._card p {
   font-size: 14px;
   font-style: italic;
   color: #575756;
   margin-bottom: 0;
 }
-
 body ._main #widget ._content ._scrollable ._card i._icon-active {
   font-size: 22.5px;
-  color: #0573F0;
+  color: hsl(188deg, 93%, 28%);
 }
-
 body ._main #widget ._content ._scrollable ._card i._icon-inactive {
   font-size: 22.5px;
   color: #888888;
 }
-
 body ._main #widget ._content ._search form input {
   text-align: center;
-  background-color: #0573f042;
-  border: 2px solid #0573f042;
+  background-color: rgba(5, 115, 240, 0.2588235294);
+  border: 2px solid rgba(5, 115, 240, 0.2588235294);
   border-radius: 7px;
   margin-bottom: 5px;
 }
-
 body ._main #widget ._content ._search form button {
   height: 45px;
-  background-color: #0573F0;
+  background-color: hsl(188deg, 93%, 28%);
   border: none;
   font-size: 15px;
   border-radius: 7px;
   color: white;
 }
-
 body ._main #widget ._content ._container {
   min-width: 25vw;
   max-height: 45vh;
   margin: 12px 0;
 }
-
 body ._main #widget ._content ._container ._card {
   margin: 10px;
   text-align: left;
   width: 22vw;
   min-height: 175px;
-  border: 2px solid #0573f042;
+  border: 2px solid rgba(5, 115, 240, 0.2588235294);
   padding: 15px;
   border-radius: 15px;
 }
-
 body ._main #widget ._content ._container ._card h5 {
   font-size: 16px;
   color: #575756;
   margin-bottom: 0;
   font-weight: 500;
 }
-
 body ._main #widget ._content ._container ._card p {
   font-size: 14px;
   font-style: italic;
   color: #575756;
   margin-bottom: 0;
 }
-
 body ._main #widget ._content ._container ._button {
   margin: 10px;
   text-align: left;
   width: 225px;
   text-align: center;
 }
-
 body ._main #widget ._content ._container ._button button._share {
-  background-color: #0573F0;
+  background-color: hsl(188deg, 93%, 28%);
   padding: 10px 0;
   color: white;
   font-size: 17px;
@@ -285,7 +247,6 @@ body ._main #widget ._content ._container ._button button._share {
   border-radius: 7px;
   border: none;
 }
-
 body ._main #widget ._content ._container ._button a._reject {
   color: #888888;
   text-align: center;
@@ -293,13 +254,11 @@ body ._main #widget ._content ._container ._button a._reject {
   font-weight: 600;
   border-radius: 7px;
 }
-
 body ._main #widget ._content ._container-list {
   margin: 0;
   min-height: 150px;
   width: 27vw;
 }
-
 body ._main #widget ._content ._container-list ._window-content {
   width: 24vw;
   min-height: 25vh;
@@ -307,45 +266,37 @@ body ._main #widget ._content ._container-list ._window-content {
   overflow: auto;
   overflow-x: hidden !important;
   border-radius: 25px;
-  border: 2px solid #0573f042;
+  border: 2px solid rgba(5, 115, 240, 0.2588235294);
 }
-
 body ._main #widget ._content ._container-list ._window-content::-webkit-scrollbar {
   width: 5px;
   max-height: 100px;
 }
-
 body ._main #widget ._content ._container-list ._window-content::-webkit-scrollbar-track {
-  background: #0573f042;
+  background: rgba(5, 115, 240, 0.2588235294);
 }
-
 body ._main #widget ._content ._container-list ._window-content::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 5px;
   max-height: 50px;
 }
-
 body ._main #widget ._content ._container-list ._window-content::-webkit-scrollbar-thumb:hover {
   background: #575756;
 }
-
 body ._main #widget ._content ._container-list ._window-content::-webkit-scrollbar-button {
   height: 30px;
 }
-
 body ._main #widget ._content ._container-list ._window-content ul {
   margin-bottom: 0;
   padding-left: 0;
   width: 20vw;
 }
-
 body ._main #widget ._content ._container-list ._window-content ul li {
   list-style: none;
   text-align: left;
   padding-bottom: 10px;
   margin-bottom: 0;
 }
-
 body ._main #widget ._content ._container-list ._window-content ul li p {
   margin-bottom: 0;
   font-size: 20px;
@@ -353,26 +304,21 @@ body ._main #widget ._content ._container-list ._window-content ul li p {
   color: #575756;
   font-weight: 400;
 }
-
 body ._main #widget ._content ._container-list ._window-content ul li i {
   font-size: 20px;
   color: #ccc;
 }
-
 body ._main #widget ._content ._container-list ._window-content ul li i:hover {
   color: #888888;
-  -webkit-transition: .4s;
-  transition: .4s;
+  transition: 0.4s;
 }
-
 body ._main #widget ._content ._btns {
   margin: 10px;
   text-align: left;
   text-align: center;
 }
-
 body ._main #widget ._content ._btns button._share {
-  background-color: #0573F0;
+  background-color: hsl(188deg, 93%, 28%);
   padding: 10px 0;
   color: white;
   font-size: 17px;
@@ -380,7 +326,6 @@ body ._main #widget ._content ._btns button._share {
   border-radius: 7px;
   border: none;
 }
-
 body ._main #widget ._content ._btns a._reject {
   color: #888888;
   text-align: center;
@@ -388,148 +333,119 @@ body ._main #widget ._content ._btns a._reject {
   font-weight: 600;
   border-radius: 7px;
 }
-
 body ._main #widget ._menu-content ul {
   padding-left: 0;
 }
-
 body ._main #widget ._menu-content ul li {
   list-style: none;
   margin-bottom: 25px;
 }
-
 body ._main #widget ._menu-content ul li a {
   padding-bottom: 20px;
   font-size: 40px;
   color: white;
   font-weight: 400;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 body ._main #widget ._menu-content ul li a:hover {
   border-bottom: 3px solid white;
 }
-
 body ._main #widget ._copyright {
   min-height: 6vh;
 }
-
 body ._main #widget ._copyright a {
   font-size: 18px;
   font-weight: 600;
 }
-
 body ._main #widget ._copyright a._blue-color {
-  color: #0573F0;
+  color: hsl(188deg, 93%, 28%);
 }
-
 body ._main #widget ._copyright a._white-color {
   color: white;
 }
-
 body ._main #widget a#copyright {
   font-size: 18px;
   font-weight: 600;
 }
-
 body ._main #widget ._top-bar {
   min-height: 70px;
 }
-
 body ._main #widget ._top-bar ._back-button i {
-  color: #0573F0;
+  color: hsl(188deg, 93%, 28%);
   font-size: 22px;
 }
-
 body ._main #widget ._top-bar ._back-button p {
-  color: #0573F0;
+  color: hsl(188deg, 93%, 28%);
   font-size: 18px;
   margin-bottom: 0 !important;
   font-weight: 600;
 }
-
 body ._main #widget ._top-bar ._more-button {
   background-color: transparent;
   border: none;
 }
-
 body ._main #widget ._top-bar ._more-button span {
-  border: 1px solid #0573F0;
+  border: 1px solid hsl(188deg, 93%, 28%);
   width: 30px;
   height: 30px;
   border-radius: 30px;
 }
-
 body ._main #widget ._top-bar ._more-button i {
-  color: #0573F0;
+  color: hsl(188deg, 93%, 28%);
   font-size: 22px;
 }
-
 body ._main #widget ._top-bar ._dropdown {
   padding: 0;
-  border-color: #0573f042;
+  border-color: rgba(5, 115, 240, 0.2588235294);
   padding: 0;
 }
-
 body ._main #widget ._top-bar ._dropdown a {
   padding: 7px 15px;
   font-weight: 600;
 }
-
 body ._main #widget ._top-bar ._dropdown a:hover {
-  background-color: #0573f042;
-  -webkit-transition: 0.4s;
+  background-color: rgba(5, 115, 240, 0.2588235294);
   transition: 0.4s;
 }
-
 body ._main #widget ._window {
   margin: 0;
   height: 60vh;
   min-height: 420px;
   width: 27vw;
 }
-
 body ._main #widget ._window ._window-content {
   width: 24vw;
   max-height: 60vh;
   overflow: auto;
   overflow-x: hidden !important;
   border-radius: 25px;
-  border: 2px solid #0573f042;
+  border: 2px solid rgba(5, 115, 240, 0.2588235294);
 }
-
 body ._main #widget ._window ._window-content::-webkit-scrollbar {
   width: 5px;
   max-height: 100px;
 }
-
 body ._main #widget ._window ._window-content::-webkit-scrollbar-track {
-  background: #0573f042;
+  background: rgba(5, 115, 240, 0.2588235294);
 }
-
 body ._main #widget ._window ._window-content::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 5px;
   max-height: 50px;
 }
-
 body ._main #widget ._window ._window-content::-webkit-scrollbar-thumb:hover {
   background: #575756;
 }
-
 body ._main #widget ._window ._window-content::-webkit-scrollbar-button {
   height: 30px;
 }
-
 body ._main #widget ._window ._window-content ._image {
   width: 150px;
   height: 150px;
-  background-color: #0573f042;
+  background-color: rgba(5, 115, 240, 0.2588235294);
   background-position: center;
   background-size: cover;
 }
-
 body ._main #widget ._window ._window-content h5 {
   font-size: 16px;
   color: #575756;
@@ -537,7 +453,6 @@ body ._main #widget ._window ._window-content h5 {
   font-weight: 500;
   text-align: left;
 }
-
 body ._main #widget ._window ._window-content p {
   font-size: 14px;
   font-style: italic;
@@ -545,68 +460,53 @@ body ._main #widget ._window ._window-content p {
   margin-bottom: 0;
   text-align: left;
 }
-
 body ._onboarding ._verify {
-  -webkit-transition: .7s;
-  transition: .7s;
+  transition: 0.7s;
 }
-
 body ._onboarding ._verify ._input {
   border: 1px solid #888888;
 }
-
 body ._onboarding ._verify ._input span {
   font-size: 18px;
   margin-right: 10px;
   font-weight: 500;
   color: #292928;
 }
-
 body ._onboarding ._verify ._input ._checked {
   font-size: 20px;
   color: #292928;
 }
-
 body ._onboarding ._verify ._input ._arrow {
   font-size: 20px;
   color: #292928;
 }
-
 body ._onboarding ._verify ._input:hover {
-  border: 1px solid #0573F0;
-  -webkit-transition: .6s;
-  transition: .6s;
+  border: 1px solid hsl(188deg, 93%, 28%);
+  transition: 0.6s;
   cursor: pointer;
 }
-
 body ._onboarding ._verify ._submit-btn {
-  background-color: #0573F0;
+  background-color: hsl(188deg, 93%, 28%);
   color: white;
   text-align: center;
 }
-
 body ._onboarding ._verify ._submit-btn-inactive {
-  background-color: #0573f042;
+  background-color: rgba(5, 115, 240, 0.2588235294);
   color: white;
   text-align: center;
 }
-
 body ._onboarding ._domain {
-  -webkit-transition: .7s;
-  transition: .7s;
+  transition: 0.7s;
 }
-
 body ._onboarding ._domain ._form {
   width: 250px;
 }
-
 body ._onboarding ._domain input {
   border: 1px solid #888888;
   padding: 8px 10px;
   margin-bottom: 15px;
   width: 100%;
 }
-
 body ._onboarding ._domain textarea {
   width: 100%;
   height: 140px;
@@ -615,9 +515,8 @@ body ._onboarding ._domain textarea {
   margin-bottom: 15px;
   font-size: 14px;
 }
-
 body ._onboarding ._domain ._submit-btn {
-  background-color: #0573F0;
+  background-color: hsl(188deg, 93%, 28%);
   color: white;
   text-align: center;
   width: 100%;
@@ -625,7 +524,6 @@ body ._onboarding ._domain ._submit-btn {
   height: 45px;
   padding: 10px 10px;
 }
-
 body ._onboarding ._domain ._copy-btn {
   background-color: #888888;
   color: white;
@@ -635,7 +533,6 @@ body ._onboarding ._domain ._copy-btn {
   height: 45px;
   padding: 10px 10px;
 }
-
 body ._onboarding ._domain ._statue p {
   font-size: 15px;
   margin-bottom: 0 !important;
@@ -703,7 +600,6 @@ body ._onboarding ._domain ._statue p {
     min-height: 900px;
   }
 }
-
 @media only screen and (max-width: 2560px) {
   body ._main #widget {
     height: 70vh;
@@ -765,12 +661,9 @@ body ._onboarding ._domain ._statue p {
     min-height: 60vh;
   }
 }
-
 @media only screen and (max-width: 1080px) {
   body ._main {
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
+    justify-content: center !important;
   }
   body ._main #widget {
     width: 60vw;
@@ -839,7 +732,6 @@ body ._onboarding ._domain ._statue p {
     min-height: 400px;
   }
 }
-
 @media only screen and (max-width: 500px) {
   body {
     height: 100vh;
@@ -848,9 +740,7 @@ body ._onboarding ._domain ._statue p {
   body ._main {
     max-height: 100vh;
     min-height: 100vh;
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
+    justify-content: center !important;
     --bs-gutter-x: 0 !important;
     --bs-gutter-y: 0 !important;
   }
@@ -923,13 +813,11 @@ body ._onboarding ._domain ._statue p {
     min-height: 85vh;
   }
   body ._onboarding ._verify {
-    -webkit-transition: .7s;
-    transition: .7s;
+    transition: 0.7s;
     width: 90%;
   }
   body ._onboarding ._domain {
-    -webkit-transition: .7s;
-    transition: .7s;
+    transition: 0.7s;
     width: 90%;
   }
   body ._onboarding ._domain input {
@@ -942,4 +830,5 @@ body ._onboarding ._domain ._statue p {
     width: 90%;
   }
 }
+
 /*# sourceMappingURL=core.css.map */
